src/test/deca/syntax/valid/created/decl_var/matherror7.deca
// Description:
//  Affectation de float avec identifier float
// Resultats:
//  OK

{
 float a = 00.5;
 }