src/test/deca/syntax/invalid/created/matherror/matherror9.deca
// Description:
//  Affectation de float avec identifier float
// Resultats:
//  Ligne 7 :  extraneous input '.' expecting {'false', 'new', 'null', 'readInt', 'readFloat', 'this', 'true', IDENT, '-', '(', '!', INT, FLOAT, STRING}

{
float a = .5;
}